# bt-web-ui

./: .gitignore  AGENTS.md  README.md
.specify/memory/: constitution.md
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/bt_web_ui/: __init__.py  config.py  deps.py  main.py
backend/src/bt_web_ui/api/: adapter.py  devices.py  settings.py  websocket.py
backend/src/bt_web_ui/services/: bluetooth.py
backend/src/bt_web_ui/templates/: base.html  index.html
backend/tests/: conftest.py
backend/tests/api/: test_adapter_api.py  test_devices_api.py  test_settings_api.py
backend/tests/integration/: test_device_lifecycle.py  test_websocket_events.py
backend/tests/unit/: test_bluetooth_service.py  test_device_models.py  test_device_store.py
specs/001-bluetooth-web-ui/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/001-bluetooth-web-ui/contracts/: rest-api.md  websocket-api.md
